Version 3.7

* BUGFIX: Fixed HMAC for hash functions with other than 512 bit internal block size.

2016-01-26 release(3.7.1037)
* BUGFIX: Fixed building from SRPM
  Thanks to Peter Portante
* BUGFIX: Compilation issues under Fedora 21
  Thanks to Peter Portante
* IMPROVEMENT: Versioning includes 
* BUGFIX: KSI_Signature_getDocumentHash fixed when applied to legacy signature.
* BUGFIX: KSI_MultiSignature_get fixed when extracting legacy signature.
* BUGFIX: KSI_MultiSignature_remove fixed when removing legacy signature.

Version 3.4

2015-12-09 release(3.4.0.6)
* Added mime-type to http requests.

2015-09-14 release(3.4.0.1)
* Removed all default endpoints.
* Added multi signature container.
* Publications file parsing and verification are now more strict.
* Publications file verification customizable.
* Added fast tlv parser.
* Fixed getLatestPublication and getNearestPublication.
* Restructured logging (new log levels).
* All size variables changed to size_t.
* Hash algorithm id changed from int to KSI_HashAlgorithm.
* Debian packaging.
* Publications file creation and signing support.
* Hashing algorithm RIPEMD-256 removed.
* Local aggregation support.
* Fixed calendar hash chain calculation.

Version 3.2 

2015-05-14 release (3.2.2.0)
* Added functions for signing locally aggregated root hashes.
* Added convenience functions for verifying a signature with user provided
publication.

2015-04-01 release (3.2.1.0)
* First public release